--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
 
                         <textarea class="alias"></textarea>
 
-                    </section>
+                        <button>Search Album</button>
 
+                        <div id="Album"></div>
+
+                    </section>
 
                 </div>
 
